# enteserver

./: .gitignore  Dockerfile  README.md  config.example.toml  config.toml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_ente_compat.db
.github/workflows/: ci.yml
app/: cli.py  config.py  db.py  local_s3.py  main.py  models.py  ott.py  s3.py  schemas.py  security.py  srp.py  storage.py
app/config/: __init__.py  manager.py  models.py  sources.py
app/routers/: admin_ui.py  albums_redirect.py  auth.py  collections.py  files.py  invite.py  kex.py  local_storage.py  public_links.py  storage.py  trash.py
docs/: api.md
migrations/: 001_ente_compatibility.py  002_photo_features.py  003_thumbnail_size.py  README.md
tests/: MOBILE_COMPATIBILITY.md  __init__.py  conftest.py  test_api_compat.py  test_auth_login.py  test_ente_compatibility.py  test_main.py  test_s3.py  test_srp.py
